--- a/client/photo-viewer.html
+++ b/client/photo-viewer.html
@@ -4,8 +4,8 @@
     <title>Photo Viewer</title>
   </head>
   <body>
-    <img src='ullr.png' class='photo'>
-    <img src='monochrome-ullr.png'>
-    <img src='resized-ullr.png'>
+    <img src='firewatch.png' class='photo'>
+    <img src='monochrome-firewatch.png'>
+    <img src='resized-firewatch.png'>
   </body>
 </html>
