--- a/client/index.html
+++ b/client/index.html
@@ -4,5 +4,9 @@
     <title>Build an image processing server</title>
   </head>
   <body>
+    <form method="POST" action="/upload"  enctype="multipart/form-data">
+      <input class='file-input' name="photo">
+      <input class='submit-button' name="submit" type="submit">
+    </form>
   </body>
 </html>
