--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <form method="POST" action="/upload"  enctype="multipart/form-data">
-      <input class='file-input' name="photo">
-      <input class='submit-button' name="submit" type="submit">
+      <input class='file-input' name="photo" type='file'>
+      <input class='submit-button' name="submit" type="submit" value="Submit">
     </form>
   </body>
 </html>
